[package]
name = "aws-s3-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
aws-config = "1.8.6"
aws-sdk-s3 = "1.106.0"

[dev-dependencies]
image = "0.25.8"
dotenv = "0.15.0"
tokio = { version = "1.47.1", features = ["full"] }
reqwest = { version = "0.12.23", features = ["json"] }
